image issue changedsssssssseodvf

--- a/.env
+++ b/.env
@@ -11,5 +11,5 @@ ADMIN_EMAIL=saidigitechnologies@gmail.com
 ADMIN_PASSWORD=SAI@12345
 EMAIL_USER=contact@saihustlehub.com
 EMAIL_PASS=WQ$tcUMRou
-BASE_URL=http://localhost:9099
-# BASE_URL=https://apicrm.saihustlehub.com
+# BASE_URL=http://localhost:9099
+BASE_URL=https://shh-backend-me-141f.vercel.app
