image issue changedsssssssseodvf

--- a/.env
+++ b/.env
@@ -12,4 +12,4 @@ ADMIN_PASSWORD=SAI@12345
 EMAIL_USER=contact@saihustlehub.com
 EMAIL_PASS=WQ$tcUMRou
 # BASE_URL=http://localhost:9099
-BASE_URL=https://shh-backend-me-141f.vercel.app
+BASE_URL=https://sparkly-pavlova-9502a6.netlify.app/
