--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "moment": "^2.30.1",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "connect-mongo": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
